deployment_conf/uat/service-frontend-app-ua.yaml
apiVersion: v1
kind: Service
metadata:
  name: deployment-frontend-app-ua
  namespace: namespace-ua
  labels:
   app: deployment-frontend-app-ua
spec:
  ports:
  - protocol: "TCP"
    port: 80
  selector:
    run: deployment-frontend-app-ua
  type: NodePort
